--- a/code/Mizer_playtime.Rmd
+++ b/code/Mizer_playtime.Rmd
@@ -1,18 +1,50 @@
 ---
 title: "Mizer playtime"
 author: "Philipp Neubauer"
-date: "06/01/2015"
-output: html_document
+date: today
+output:
+  html_document:
+    theme: spacelab
 ---
 
-Finally, underway, the website halfway up and passing Travis-CI; time to get this MArsden research rolling! 
+Finally, underway, the website halfway up and passing Travis-CI; time to get this Marsden research rolling! 
 
 My plan is to start with some inital playing around with mizer, check out the source code (and try to udnerstand it!) together with the vignette, then start checking out some climate options etc. 
 
 Had a quick look at the [source](https://github.com/Philipp-Neubauer/mizer/tree/master/R), and it looks like well written obect oriented R. Hooray! Installed the package locally from my fork, in case I want to mess with it. I do want to mess with it. Do some vignette play:
 
-```{}r
-plot(1:100,rnorm(100))
+```{r}
+
+require(mizer)
 
 ```
+
+The vignette starts with the community model, with no species or trait specifications. To set up model, a constructor function is used and as per vignette:
+
+>The arguments that you should pay attention to are: z0 (the level of background mortality), alpha
+>(the assimilation efficiency of the community), f0 (the average feeding level of the community which
+>is used to calculate γ in equation 3.16) and recruitment (the level of constant recruitment).
+
+Let's give it a play with that!
+
+```{r}
+
+params <- set_community_model(z0 = 0.1, f0 = 0.7, alpha = 0.2, recruitment = 4e7)
+
+slotNames(params)
+summary(params)
+
+```
+
+Let's project this forward:
+
+```{r}
+
+sim <- project(params, t_max=50, effort = 0)
+
+plot(sim)
+
+```
+
+
 
