changing productivity simulations, not working with local.make for some reason

--- a/site/posts/2015-05-05-emulation_using_GPs.Rmd
+++ b/site/posts/2015-05-05-emulation_using_GPs.Rmd
@@ -1,24 +1,32 @@
 ---
-title: "Getting started: emulating size-based models"
+title: "Getting started: History matching size-based models"
 author: "Philipp Neubauer"
 date: "13/05/2015"
 bibliography: "include/GP_emulators/History_match.bib"
 ---
 
-```{r echo=F,message=F}
+```{r echo=F,message=F,results='hide'}
 library("knitcitations")
+require("mizer")
+require("parallel")
+require("ggplot2")
+require("emulator")
+require(dplyr)
+require(knitr)
+opts_chunk$set(cache=TRUE)
+
 cleanbib()
 options("citation_format" = "pandoc")
 bib = read.bibtex('include/GP_emulators/History_match.bib')
 ```
 
-Finally, underway, the website halfway up; time to get this Marsden research rolling!
+History matching size-based models
+====================================
 
-Starting with mizer to get a community model up and running, see if I can emulate it using Gaussian processes. I'll closely follow `r citet(bib[["andrianakis_bayesian_2015"]])` in this first try.
+Starting with mizer to get a community model up and running, see if I can emulate it using Gaussian processes, then use history matching to discard parameter values that provide poor matches to data. I'll closely follow `r citet(bib[["andrianakis_bayesian_2015"]])` in this first try.
 
-```{r}
-require("mizer")
-require("parallel")
+```{r warning=FALSE,message=FALSE}
+
 
 truth <- set_community_model(max_w = 1e+06, min_w = 0.001,r_pp=10,
                     z0 = 0.1, alpha = 0.2, h = 10, beta = 100, sigma = 2,
@@ -27,13 +35,12 @@ truth <- set_community_model(max_w = 1e+06, min_w = 0.001,r_pp=10,
                     knife_edge_size = 1000)
 
 sim <- project(truth, effort = 0, t_max = 20, dt=0.1)
-plot(sim)
 
 data <- getCommunitySlope(sim)[20,]
 ```
 Now define a hypercube to sample from and calibrate the Gaussian process that will (hopefully!) emulate the size spectrum outputs.
 
-```{r}
+```{r warning=FALSE,message=FALSE}
 #Set prior search space
 cube=6
 dims=4
@@ -76,29 +83,48 @@ simdat <- do.call('rbind',simdat)
 So far so good, with those simulation in our pocket, we can go to the emulation part:
 
 ```{r}
-require("dplyr")
-
 inputs <- do.call('rbind',sim_data)
 outputs1 <- simdat[,1]
 outputs2 <- simdat[,2]
 
 ```
-Following A et al. 2015 - estimate the length scale from data. Simulated annealing seems to work best here as the surface in 4 dimensions is multimodal and other optim choices get stuck in suboptimal modes. Wonder if there's better alternatives (besides MCMC or numerical integration, which seem to defeat the purpose.)
+Following `r citet("andrianakis_bayesian_2015")` - estimate the length scale from data. Simulated annealing seems to work best here as the surface in 4 dimensions is multimodal and other optim method choices get stuck in suboptimal modes. Wonder if there's better alternatives (besides MCMC or numerical integration, which seem to defeat the purpose.)
+
+Using `r citet(bib[["vernon_galaxy_2010"]])`, set the initial guess at a conservative 0.125 times the range of the inputs given the cubic regressor.
 
 ```{r}
-require(emulator)
-pars_w1_o1 <- optimal.scales(val=inputs, rep(10,4), as.matrix(outputs1),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
-pars_w1_o2 <- optimal.scales(val=inputs, rep(10,4), as.matrix(outputs2),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
 
-A_w1_o1 = corr.matrix(inputs,scales=pars_w1_o1);
+meanfunk <- function(x){
+  out <- c(1,x,x^2,x^3)
+  names(out) <- letters[1:length(x)]
+  return(out)
+}
+
+# scale inputs to lie in [-1,1], makes things more numerically stable
+
+ipmax <- apply(inputs,2,max)
+ipmean <- colMeans(inputs)
+
+scale <- function(x,ipmean,ipmax) (x-ipmean)/(ipmax-ipmean)
+rescale <- function(x,ipmean,ipmax) x*(ipmax-ipmean)+ipmean
+
+input <- t(apply(inputs, 1, scale, ipmean, ipmax))
+
+scale_start <- 1/(0.125*as.vector(diff(apply(input,2,range))))^2
+
+pars_w1_o1 <- optimal.scales(val=input,scale_start,func=meanfunk, as.matrix(outputs1),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
+
+pars_w1_o2 <- optimal.scales(val=input,scale_start,func=meanfunk, as.matrix(outputs2),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
+
+A_w1_o1 = corr.matrix(input,scales=pars_w1_o1);
 Ainv_w1_o1 <- solve(A_w1_o1)
 
-A_w1_o2 = corr.matrix(inputs,scales=pars_w1_o2);
+A_w1_o2 = corr.matrix(input,scales=pars_w1_o2);
 Ainv_w1_o2 <- solve(A_w1_o2)
 
 ```
 
-Next, need to predict to a whole lot of points and calculate implausibility:
+Next, need to predict to a whole lot of points and calculate implausibility. Using the emulator package for this:
 
 ```{r}
 cube_pred <- 10
@@ -115,14 +141,14 @@ for(ns in preds$n){
     for (hs in preds$h){
       for (bs in preds$beta){
         a=a+1
-        predicts[[a]] <- c(ns,qs,hs,bs)
+        predicts[[a]] <- scale(c(ns,qs,hs,bs),ipmean,ipmax)
       }
     }
   }
 }
    
-predmu_w1_o1 <- parallel::mclapply(predicts,interpolant, outputs1, as.matrix(inputs),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w1_o1,g=TRUE,mc.cores=4)
-predmu_w1_o2 <- parallel::mclapply(predicts,interpolant, outputs2, as.matrix(inputs),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w1_o2,g=TRUE,mc.cores=4)
+predmu_w1_o1 <- parallel::mclapply(predicts,interpolant, outputs1, as.matrix(input),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w1_o1,func=meanfunk,g=TRUE,mc.cores=4)
+predmu_w1_o2 <- parallel::mclapply(predicts,interpolant, outputs2, as.matrix(input),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w1_o2,func=meanfunk,g=TRUE,mc.cores=4)
 
 predvar_w1_o1 <- unlist(lapply(predmu_w1_o1,function(x) x$Z))
 pred_w1_o1 <- unlist(lapply(predmu_w1_o1,function(x) x$mstar.star))
@@ -134,7 +160,7 @@ pn <- cbind(pred_w1_o1,pred_w1_o2)
 mse <- cbind(predvar_w1_o1,predvar_w1_o2)^2
 modelvar <- c(0.1*var(outputs1),0.1*var(outputs2))
 
-predictn <- data.frame(do.call('rbind',predicts))
+predictn <- data.frame(do.call('rbind',lapply(predicts,rescale,ipmean,ipmax)))
 
 predictn$impl <- sapply(1:nrow(pn),function(x){ 
   imp <- as.matrix(data[,c('slope','intercept')] - pn[x,]) %*% solve(diag(mse[x,]+modelvar)) %*% t(as.matrix(data[,c('slope','intercept')] - pn[x,]))
@@ -143,14 +169,19 @@ predictn$impl <- sapply(1:nrow(pn),function(x){
 
 colnames(predictn) <- c('n','q','h','beta','Implausibility')
 
-require(ggplot2)
-
 ggplot(predictn,aes(x=n,y=q,z=Implausibility)) + stat_summary2d(fun = function(x) mean(x>3))
+
+ggplot(predictn,aes(x=n,y=beta,z=Implausibility)) + stat_summary2d(fun = function(x) mean(x>3))
+
+ggplot(predictn,aes(x=h,y=beta,z=Implausibility)) + stat_summary2d(fun = function(x) mean(x>3))
+
 
 keepers <- predictn %>% filter(Implausibility<3) %>% select(-Implausibility)
 ```
 
-Now draw from MYN distribution around keepers (or subset thereof), choose variance to have ~ 20% rejected
+In this wave, `r round(100*nrow(keepers)/length(predicts))`% of points of the hypercube remain undiscarted. 
+
+Now draw from MYN distribution around keepers (or subset thereof), choose variance to have ~ 20% rejected. Those are the starting points for the next wave of history matching.
 
 ```{r}
 repmat = function(X,m,n){
@@ -161,20 +192,28 @@ repmat = function(X,m,n){
   matrix(t(matrix(X,mx,nx*n)),mx*m,nx*n,byrow=T)
 }
 
-#draw 20 points at each keeper
-new_points_sim <- t(apply(repmat(keepers,20,1),1,function(x) t(mvtnorm::rmvnorm(1,x,diag(rep(0.05*isd))))))
+#draw 12000 points total
+oc <- round(15000/nrow(keepers))
 
-apply.range <- apply(sapply(1:d,function(x) new_points_sim[,x]>range(preds[,x])[1] & new_points_sim[,x]<range(preds[,x])[2]),1,all)
+keepers_sc <- t(apply(keepers,1,scale,ipmean,ipmax))
+isd <- apply(keepers_sc,2,sd)
+new_points_sim <- t(apply(repmat(keepers_sc,oc,1),1,function(x) t(mvtnorm::rmvnorm(1,x,diag(rep(0.01*isd))))))
+
+d=ncol(keepers)
+apply.range <- apply(sapply(1:d,function(x) new_points_sim[,x]>=-1 & new_points_sim[,x]<=1),1,all)
 
 new_points_sim <- new_points_sim[apply.range,]
+dim(new_points_sim)
 
 ss <- sample(1:nrow(new_points_sim),1000,replace = F)
 new_points_sim_sub <- new_points_sim[ss,]
 
-new_points_sim_list <- split(new_points_sim,1:nrow(new_points_sim))
+new_points_sim_sub_list <- split(new_points_sim_sub,1:nrow(new_points_sim_sub))
 
-predmu_w1test_o1 <- parallel::mclapply(new_points_sim_list,interpolant, outputs1, as.matrix(inputs),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w1_o1,g=TRUE,mc.cores=4)
-predmu_w1test_o2 <- parallel::mclapply(new_points_sim_list,interpolant, outputs2, as.matrix(inputs),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w2_o1,g=TRUE,mc.cores=4)
+#test output1
+predmu_w1test_o1 <- parallel::mclapply(new_points_sim_sub_list,interpolant, outputs1, as.matrix(input),A=A_w1_o1,Ainv=Ainv_w1_o1,scales=pars_w1_o1,func=meanfunk,g=TRUE,mc.cores=4)
+#test output2
+predmu_w1test_o2 <- parallel::mclapply(new_points_sim_sub_list,interpolant, outputs2, as.matrix(input),A=A_w1_o2,Ainv=Ainv_w1_o2,scales=pars_w1_o2,func=meanfunk,g=TRUE,mc.cores=4)
 
 predvar_w1test_o1 <- unlist(lapply(predmu_w1test_o1,function(x) x$Z))
 pred_w1test_o1 <- unlist(lapply(predmu_w1test_o1,function(x) x$mstar.star))
@@ -195,16 +234,18 @@ test_impl <- sapply(1:nrow(pn),function(x){
 mean(test_impl>3)
 ```
 
-About `r round(mean(test_impl>3))` percent rejected at this try. Now re-run simulator and GP for the next wave...
+About `r round(100*mean(test_impl>3))` percent rejected at this try. Now re-run simulator and GP emulation & history matching for the next wave...
 
 Wave 2
-========
+---------
 
 ```{r}
-        
-new_points_sim_sub_list <- split(new_points_sim_sub,1:nrow(new_points_sim_sub))
+   
 
-sim_data_w2 <- mclapply(new_points_sim_sub_list,function(x){
+sim_in_w2 <- t(apply(new_points_sim_sub, 1, rescale, ipmean, ipmax))
+sim_in_w2_list <- split(sim_in_w2,1:nrow(sim_in_w2))
+
+sim_data_w2 <- mclapply(sim_in_w2_list,function(x){
   truth <- set_community_model(max_w = 1e+06, min_w = 0.001,
                                z0 = 0.1, alpha = 0.2, h = x[3],
                                beta = x[4], sigma = 2,
@@ -222,8 +263,8 @@ outputs1_w2 <- w2_data[,1]
 outputs2_w2 <- w2_data[,2]  
 
 
-pars_w2_o1 <- optimal.scales(val=new_points_sim_sub, pars_w1_o1, as.matrix(outputs1_w2),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
-pars_w2_o2 <- optimal.scales(val=new_points_sim_sub, pars_w1_o2, as.matrix(outputs2_w2),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
+pars_w2_o1 <- optimal.scales(val=new_points_sim_sub, pars_w1_o1,func=meanfunk, as.matrix(outputs1_w2),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
+pars_w2_o2 <- optimal.scales(val=new_points_sim_sub, pars_w1_o2,func=meanfunk, as.matrix(outputs2_w2),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
 
 A_w2_o1 = corr.matrix(new_points_sim_sub,scales=pars_w2_o1);
 Ainv_w2_o1 <- solve(A_w2_o1)
@@ -239,8 +280,8 @@ I can now use the ```new_points_sim``` object from above to use reasonable value
 
 new_points_sim_list <- split(new_points_sim[-ss,],1:nrow(new_points_sim[-ss,]))
 
-predmu_w2_o1 <- parallel::mclapply(new_points_sim_list,interpolant, outputs1_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o1,g=TRUE,mc.cores=4)
-predmu_w2_o2 <- parallel::mclapply(new_points_sim_list,interpolant, outputs2_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o2,g=TRUE,mc.cores=4)
+predmu_w2_o1 <- parallel::mclapply(new_points_sim_list,interpolant,outputs1_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o1,func=meanfunk,g=TRUE,mc.cores=4)
+predmu_w2_o2 <- parallel::mclapply(new_points_sim_list,interpolant,outputs2_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o2,func=meanfunk,g=TRUE,mc.cores=4)
 
 predvar_w2_o1 <- unlist(lapply(predmu_w2_o1,function(x) x$Z))
 pred_w2_o1 <- unlist(lapply(predmu_w2_o1,function(x) x$mstar.star))
@@ -252,7 +293,7 @@ pn <- cbind(pred_w2_o1,pred_w2_o2)
 mse <- cbind(predvar_w2_o1,predvar_w2_o2)^2
 modelvar <- c(0.1*var(outputs1_w2),0.1*var(outputs2_w2))
 
-predictn <- data.frame(do.call('rbind',new_points_sim_list))
+predictn <- data.frame(do.call('rbind',lapply(new_points_sim_list,rescale,ipmean,ipmax)))
 
 predictn$impl <- sapply(1:nrow(pn),function(x){ 
   imp <- as.matrix(data[,c('slope','intercept')] - pn[x,]) %*% solve(diag(mse[x,]+modelvar)) %*% t(as.matrix(data[,c('slope','intercept')] - pn[x,]))
@@ -271,24 +312,27 @@ hist(keepers$n)
 hist(keepers$q)
 hist(keepers$beta)
 
-keepers <- predictn %>% filter(Implausibility<3) %>% select(-Implausibility)
+keepers_w2 <- predictn %>% filter(Implausibility<3) %>% select(-Implausibility)
 ```
 
 
 ```{r}
-new_points_sim_w2 <- t(apply(repmat(keepers,20,1),1,function(x) t(mvtnorm::rmvnorm(1,x,diag(0.05*apply(keepers,2,sd))))))
+oc <- round(15000/nrow(keepers_w2))
+keepers_sc <- t(apply(keepers_w2,1,scale,ipmean,ipmax))
+isd <- apply(keepers_sc,2,sd)
+new_points_sim_w2 <- t(apply(repmat(keepers_sc,oc,1),1,function(x) t(mvtnorm::rmvnorm(1,x,diag(rep(0.01*isd))))))
 
-apply.range <- apply(sapply(1:d,function(x) new_points_sim_w2[,x]>range(preds[,x])[1] & new_points_sim_w2[,x]<range(preds[,x])[2]),1,all)
+apply.range <- apply(sapply(1:d,function(x) new_points_sim_w2[,x]>-1 & new_points_sim_w2[,x]<1),1,all)
 
 new_points_sim_w2 <- new_points_sim_w2[apply.range,]
 
 ss <- sample(1:nrow(new_points_sim_w2),1000,replace = F)
 new_points_sim_sub_w2 <- new_points_sim_w2[ss,]
 
-new_points_sim_list_w2 <- split(new_points_sim_w2,1:nrow(new_points_sim_w2))
+new_points_sim_sub_list_w2 <- split(new_points_sim_sub_w2 ,1:nrow(new_points_sim_sub_w2 ))
 
-predmu_w2test_o1 <- parallel::mclapply(new_points_sim_list_w2,interpolant, outputs1_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o1,g=TRUE,mc.cores=4)
-predmu_w2test_o2 <- parallel::mclapply(new_points_sim_list_w2,interpolant, outputs2_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o1,g=TRUE,mc.cores=4)
+predmu_w2test_o1 <- parallel::mclapply(new_points_sim_sub_list_w2,interpolant, outputs1_w2, new_points_sim_sub,A=A_w2_o1,Ainv=Ainv_w2_o1,scales=pars_w2_o1,g=TRUE,mc.cores=4)
+predmu_w2test_o2 <- parallel::mclapply(new_points_sim_sub_list_w2,interpolant, outputs2_w2, new_points_sim_sub,A=A_w2_o2,Ainv=Ainv_w2_o2,scales=pars_w2_o2,g=TRUE,mc.cores=4)
 
 predvar_w2test_o1 <- unlist(lapply(predmu_w2test_o1,function(x) x$Z))
 pred_w2test_o1 <- unlist(lapply(predmu_w2test_o1,function(x) x$mstar.star))
@@ -305,21 +349,22 @@ test_impl <- sapply(1:nrow(pn),function(x){
   return(imp)
 })
 
-
 mean(test_impl>3)
 ```
 
-This looks good, about `r round(mean(test_impl>3))` percent rejected at this try. Again, re-run simulator and GP for the next wave...
+This looks good, about `r round(100*mean(test_impl>3))` percent rejected at this try. Again, re-run simulator and GP for the next wave...
 
 Wave 3
-========
+----------
 
 ```{r}
         
-new_points_sim_sub_list_w3 <- split(new_points_sim_sub_w2 ,1:nrow(new_points_sim_sub_w2 ))
+
+sim_in_w3 <- t(apply(new_points_sim_sub_w2, 1, rescale, ipmean, ipmax))
+sim_in_w3_list <- split(sim_in_w3,1:nrow(sim_in_w3))
 new_points_sim_sub_w3 <- new_points_sim_sub_w2
 
-sim_data_w3 <- mclapply(new_points_sim_sub_list_w2,function(x){
+sim_data_w3 <- mclapply(sim_in_w3_list,function(x){
   truth <- set_community_model(max_w = 1e+06, min_w = 0.001,
                                z0 = 0.1, alpha = 0.2, h = x[3],
                                beta = x[4], sigma = 2,
@@ -337,13 +382,13 @@ outputs1_w3 <- w3_data[,1]
 outputs2_w3 <- w3_data[,2]  
 
 
-pars_w3_o1 <- optimal.scales(val=new_points_sim_sub_w3, pars_w2_o1, as.matrix(outputs1_w3),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
-pars_w3_o2 <- optimal.scales(val=new_points_sim_sub_w3, pars_w2_o2, as.matrix(outputs2_w3),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
+pars_w3_o1 <- optimal.scales(val=new_points_sim_sub_w3, pars_w2_o1,func = meanfunk, as.matrix(outputs1_w3),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
+pars_w3_o2 <- optimal.scales(val=new_points_sim_sub_w3, pars_w2_o2,func = meanfunk, as.matrix(outputs2_w3),method="SANN",control=list(trace=TRUE,REPORT=10,maxit = 200,reltol=0.001))
 
-A_w3_o1 = corr.matrix(new_points_sim_sub,scales=pars_w3_o1);
+A_w3_o1 = corr.matrix(new_points_sim_sub_w3,scales=pars_w3_o1);
 Ainv_w3_o1 <- solve(A_w3_o1)
 
-A_w3_o2 = corr.matrix(new_points_sim_sub,scales=pars_w3_o2);
+A_w3_o2 = corr.matrix(new_points_sim_sub_w3,scales=pars_w3_o2);
 Ainv_w3_o2 <- solve(A_w3_o2)
 
 ```
@@ -352,10 +397,10 @@ Again,  use the ```new_points_sim``` object from above to use reasonable values 
 
 ```{r}
 
-new_points_sim_list_w3 <- new_points_sim_list_w2[-ss]
+new_points_sim_list_w3 <- split(new_points_sim_w2[-ss,],1:nrow(new_points_sim_w2[-ss,]))
 
-predmu_w3_o1 <- parallel::mclapply(new_points_sim_list_w3,interpolant, outputs1_w3, new_points_sim_sub,A=A_w3_o1,Ainv=Ainv_w3_o1,scales=pars_w3_o1,g=TRUE,mc.cores=4)
-predmu_w3_o2 <- parallel::mclapply(new_points_sim_list_w3,interpolant, outputs2_w3, new_points_sim_sub,A=A_w3_o1,Ainv=Ainv_w3_o1,scales=pars_w3_o2,g=TRUE,mc.cores=4)
+predmu_w3_o1 <- parallel::mclapply(new_points_sim_list_w3,interpolant, outputs1_w3, new_points_sim_sub_w3,A=A_w3_o1,Ainv=Ainv_w3_o1,scales=pars_w3_o1,g=TRUE,mc.cores=4)
+predmu_w3_o2 <- parallel::mclapply(new_points_sim_list_w3,interpolant, outputs2_w3, new_points_sim_sub_w3,A=A_w3_o2,Ainv=Ainv_w3_o2,scales=pars_w3_o2,g=TRUE,mc.cores=4)
 
 predvar_w3_o1 <- unlist(lapply(predmu_w3_o1,function(x) x$Z))
 pred_w3_o1 <- unlist(lapply(predmu_w3_o1,function(x) x$mstar.star))
@@ -367,14 +412,12 @@ pn <- cbind(pred_w3_o1,pred_w3_o2)
 mse <- cbind(predvar_w3_o1,predvar_w3_o2)^2
 modelvar <- c(0.1*var(outputs1_w3),0.1*var(outputs2_w3))
 
-predictn <- data.frame(do.call('rbind',new_points_sim_list_w3))
+predictn <- data.frame(do.call('rbind',lapply(new_points_sim_list_w3,rescale,ipmean,ipmax)))
 
 predictn$impl <- sapply(1:nrow(pn),function(x){ 
   imp <- as.matrix(data[,c('slope','intercept')] - pn[x,]) %*% solve(diag(mse[x,]+modelvar)) %*% t(as.matrix(data[,c('slope','intercept')] - pn[x,]))
   return(imp)
 })
-
-
 
 colnames(predictn) <- c('n','q','h','beta','Implausibility')
 
@@ -386,10 +429,12 @@ ggplot(predictn,aes(x=n,y=beta,z=Implausibility)) + stat_summary2d(fun = functio
 ggplot(predictn,aes(x=h,y=beta,z=Implausibility)) + stat_summary2d(fun = function(x) mean(x>3))
 
 
-keepers <- predictn %>% filter(Implausibility<3) %>% select(-Implausibility)
+keepers_w3 <- predictn %>% filter(Implausibility<3) %>% select(-Implausibility)
+
+nrow(keepers_w3)/length(new_points_sim_list_w3)
 
 ```
-Looks like there isn't much more to be gained here.
+I could probably keep going here, but will elave it at this for a trail - `r round(100*nrow(keepers_w3)/length(new_points_sim_list_w3))`% of points remaining. 
 
 ```{r echo=F,message=F}
 write.bibtex(file="include/GP_emulators/HM_community_model.bib")
