--- a/Beta.Rmd
+++ b/Beta.Rmd
@@ -28,70 +28,123 @@ ppmr <- ppmr %>% mutate(Mean.annual.temp = std(Mean.annual.temp),
                 Depth = std(Depth),
                 Pmass=Predator.mass)
 
+################################
+###### Taxise ##################
+################################
+
+require("taxize")
+
+# taxonomy of unresolved names
+us <- unique(ppmr$Predator)
+us[us=='Urophysis chuss'] <- 'Urophycis chuss'
+us[us=='Leucoraja  fullonica   '] <- 'Leucoraja  fullonica'
+us[us=='Myoxocephalus octodecimspinosus'] <- 'Myoxocephalus octodecemspinosus'
+
+trim <- function (x) gsub("^\\s+|\\s+$", "", x)
+us <-trim(us)
+nus<- strsplit(us,split = ' sp.',fixed=T)
+
+
+cs <- classification(nus, db = 'itis')
+
+# check names for un-resolved names
+urn <- which(unlist(lapply(cs,length))==1)
+csu <- classification(us[urn], db = 'col')
+cs[urn] <- csu
+
+urn2 <- which(unlist(lapply(cs,length))==1)
+cuss <- classification(us[urn2], db = 'ncbi')
+cs[urn2] <- cuss 
+
+ppmr$Class <- unlist(lapply(cs,function(x) x$name[x$rank=='Class' |x$rank=='class' ]))[match(ppmr$Predator,unique(ppmr$Predator))]
+
+ppmr$Order <- unlist(lapply(cs,function(x) x$name[x$rank=='Order' | x$rank=='order']))[match(ppmr$Predator,unique(ppmr$Predator))]
+
+ppmr$Family <- unlist(lapply(cs,function(x) x$name[x$rank=='Family' | x$rank=='family']))[match(ppmr$Predator,unique(ppmr$Predator))]
+
+##################################################
+################ Habitats ######################## 
+##################################################
+
+# get habitat and taxonomy from fishbase and other DBs
+require(rfishbase)
+
+fish.data <- loadCache()
+
+# %in% doesn't work, need grepl as some ScientificNames don't match - makes it really slow
+match_tax <- function (species, fish.data = NULL, path = NULL) {
+   
+    if (is.null(fish.data)) 
+        fish.data <- loadCache(path = path)
+        
+    matches <- vector('list',length(species))
+    for (i in 1:length(species)){
+    matches[[i]] <- which(sapply(fish.data, function(x) grepl(species[i],x$ScientificName) | grepl(species[i],x$Genus) | grepl(species[i],x$Family)| grepl(species[i],x$Class)))
+    }
+    return(matches)
+}
+
+
+sp_match <- parallel::mclapply(nus,match_tax,mc.cores=4)
+#save(sp_match, file = 'fb_species_match.rda')
+#load(file = 'fb_species_match.rda')
+
+sp_match <- do.call('c',sp_match)
+
+# get habitat for FB species. For higher taxonomic groupings, 
+
+habitats <- do.call('c',lapply(sp_match,function(x) {
+  if(length(x)>0){
+    habitats<- list()
+    for (i in 1:length(x))
+      habitats[[i]] <- fish.data[[x[i]]]$habitat
+    
+    habitats <- table(unlist(lapply(habitats,function(y) {
+      if(!is.null(y)) strsplit(y,'[;]')[[1]][1]
+      })))
+    habitat<-names(which.max(habitats))
+    
+    } else {
+    habitat <- NA
+    }
+  habitat
+  }
+)
+)
+
+unique(ppmr$Predator)[is.na(habitats)]
+
+habitats[is.na(habitats)] <- c('pelagic-neritic','bathypelagic','demersal','demersal','demersal','demersal','demersal','demersal','demersal','benthopelagic')
+
+ppmr$habitat <- habitats[match(ppmr$Predator,unique(ppmr$Predator))]
+
+any(is.na(ppmr$habitat))
+##################################################
+############## Subset ############################
+##################################################
+
 ppmr.better <- ppmr %>% filter(Predator.quality.of.length.mass.conversion <5,
                             Prey.quality.of.conversion.to.mass <5)
 
 ppmr.best <- ppmr %>% filter(Predator.quality.of.length.mass.conversion <4,
-                            Prey.quality.of.conversion.to.mass <4)
+                            Prey.quality.of.conversion.to.mass <4,
+                            !is.na(Individual.ID))
 
-
-best.model.rw <-  inla(log10(Prey.mass) ~ 
-                       std(log10(Predator.mass)) * Mean.annual.temp +
-                       #f(log10(Pmass),model='rw2', diagonal=1e-5) + 
-                       f(Predator,model='iid') + 
-                       f(Individual.ID,model='iid')+
-                       f(Geographic.location,model='iid')+
-                       f(Type.of.feeding.interaction,model='iid')+
-                       #f(Specific.habitat,model='iid')+
-                       #Mean.annual.temp +
-                       SD.annual.temp +
-                       Depth +
-                       #Latitude + 
-                       Mean.PP,
-                     data = ppmr.best,
-                     control.compute = list(dic=TRUE,cpo=T),
-                     control.predictor = list(compute=T)
-)
-
-summary(best.model.rw)
-plot(best.model.rw)
-plot(best.model.rw$summary.linear.predictor$`0.5quant`,log10(ppmr.best$Prey.mass))
-
--mean(log(best.model.rw$cpo$cpo))
-
-
-best.model <-  inla(log10(Prey.mass) ~ log10(Predator.mass)+
-                       #f(log10(Pmass),model='rw2', diagonal=1e-5) + 
-                       f(Predator,model='iid') + 
-                       f(Individual.ID,model='iid')+
-                       f(Geographic.location,model='iid')+
-                       f(Type.of.feeding.interaction,model='iid')+
-                       #f(Specific.habitat,model='iid')+
-                       Mean.annual.temp +
-                       SD.annual.temp +
-                       Depth +
-                       #Latitude + 
-                       Mean.PP,
-                     data = ppmr.best,
-                     control.compute = list(dic=TRUE,cpo=T),
-                     control.predictor = list(compute=T),
-)
-
-summary(best.model)
-plot(best.model)
-plot(best.model$summary.linear.predictor$`0.5quant`,log10(ppmr.best$Prey.mass))
-
--mean(log(best.model$cpo$cpo))
-hist(best.model$cpo$pit)
-
+#######################
+##### Best Models #####
+#######################
 
 best.model.int <-  inla(log10(Prey.mass) ~ log10(Predator.mass)*Mean.annual.temp+
                       SD.annual.temp +
                       #f(log10(Pmass),model='rw2', diagonal=1e-5) + 
                       f(Predator,model='iid') + 
-                      f(factor(Individual.ID),model='iid')+
                       f(Geographic.location,model='iid')+
-                  f(Type.of.feeding.interaction,model='iid')+
+                      f(Type.of.feeding.interaction,model='iid')+
+                      f(factor(Individual.ID),model='iid')+
+                      f(Order,model='iid')+
+                      f(Class,model='iid')+
+                      f(habitat,model='iid')+
+                      f(Family,model='iid')+
                       #f(Specific.habitat,model='iid')+
                       Depth +
                       #Latitude + 
@@ -110,8 +163,12 @@ abline(a=0,b=1)
 
 -mean(log(best.model.int$cpo$cpo))
 hist(best.model.int$cpo$pit)
+hist(best.model.int$cpo$cpo)
 
 
+#########################
+##### Better Models #####
+#########################
 
 better.model.int <-  inla(log10(Prey.mass) ~ log10(Predator.mass)*Mean.annual.temp+
                       SD.annual.temp +
@@ -136,6 +193,88 @@ abline(a=0,b=1)
 
 -mean(log(better.model.int$cpo$cpo))
 hist(better.model.int$cpo$pit)
+
+########################
+###### JAGS ############
+########################
+
+ppmr.data <- ppmr.best
+
+# need numbers
+n <- function(x) length(unique(x))
+nidx <- function(x) as.numeric(factor(x,levels=unique(x)))
+
+## matching taxonomy for tax indices - this is tricky...
+# match unique individual to species (Predator)
+PR <- nidx(ppmr.data$Predator)
+
+# match unique species to family 
+FAM <- nidx(ppmr.data$Family)
+
+# match unique family to order
+ORD <- nidx(ppmr.data$Order)
+
+# match unique order to class
+CL <- nidx(ppmr.data$Class)
+
+ppmr.data <- ppmr.data %>% mutate(log_ten_Pred = log10(Predator.mass),
+                                  int=log_ten_Pred*Mean.annual.temp)
+
+COVS <- ppmr.data %>% select(log_ten_Pred,
+                             #Mean.annual.temp,
+                             #SD.annual.temp,
+                             #Depth,
+                             #Mean.PP,int
+                             ) %>%
+  data.frame()
+  
+COVS<- data.frame(intercept=1,COVS)
+  
+require(R2jags)
+
+jagsdata <- list(COVS=COVS,
+                 NCOVS = ncol(COVS),
+                 log_ten_Prey = log10(ppmr.data$Prey.mass),
+                 PREY = nrow(ppmr.data),
+                 HABITATS = n(ppmr.data$habitat),
+                 FEEDTYPES = n(ppmr.data$Type.of.feeding.interaction),
+                 GEOAREAS = n(ppmr.data$Geographic.location),
+                 NIND = n(ppmr.data$Individual.ID),
+                 NSPECIES = n(ppmr.data$Predator),
+                 NFAMILIES = n(ppmr.data$Family),
+                 NORDERS = n(ppmr.data$Order),
+                 NCLASSES = n(ppmr.data$Class),
+                 species = PR[match(unique(ind),ind)],
+                 family = FAM[match(unique(PR),PR)],
+                 order = ORD[match(unique(FAM),FAM)],
+                 class = CL[match(unique(ORD),ORD)],
+                 # effect indices
+                 habitat = nidx(ppmr.data$habitat),
+                 feedtype = nidx(ppmr.data$Type.of.feeding.interaction),
+                 geoarea = nidx(ppmr.data$Geographic.location),
+                 ind = nidx(ppmr.data$Individual.ID)
+)
+                 
+JM <- jags.model(file = 'taxmodel_HC.R',data=jagsdata,n.chains = 1, n.adapt=1000)
+
+update(JM,10000)
+
+mout <- coda.samples(model = JM,
+                     variable.names = c('betas',
+                                        'sd.ind',
+                                        'sd.species',
+                                        'sd.family',
+                                        'sd.order',
+                                        'sd.class',
+                                        'sd.geoareafx',
+                                        'sd.habfx',
+                                        'sd.feedtypefx',
+                                        'species.scale',
+                                        'family.scale',
+                                        'class.scale',
+                                        'order.scale'),
+                     n.iter = 1e5,
+                     thin = 50)
 
 ```
 
